--- a/AtCoderTemplate/content/AtCoderTemplate.csproj
+++ b/AtCoderTemplate/content/AtCoderTemplate.csproj
@@ -1,8 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp1.1</TargetFramework>
+    <TargetFramework>net461</TargetFramework>
   </PropertyGroup>
-
 </Project>
