--- a/AtCoderTemplate/content/AtCoderTemplate.csproj
+++ b/AtCoderTemplate/content/AtCoderTemplate.csproj
@@ -2,5 +2,10 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net461</TargetFramework>
+    <ApplicationIcon />
+    <Win32Resource />
+    <StartupObject></StartupObject>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
   </PropertyGroup>
 </Project>
