--- a/ACTempTest/ACTempTest.csproj
+++ b/ACTempTest/ACTempTest.csproj
@@ -9,6 +9,6 @@
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0"/>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\content\AtCoderTemplate.csproj"/>
+    <ProjectReference Include="..\AtCoderTemplate\content\AtCoderTemplate.csproj"/>
   </ItemGroup>
 </Project>
