bashスクリプト作成/ テンプレート作成フローの変更(npkgを作成せず直接new -i)/ Immutable削除

--- a/AtCoderTemplate/AtCoderContest.Template.CSharp.nuspec
+++ b/AtCoderTemplate/AtCoderContest.Template.CSharp.nuspec
@@ -2,11 +2,11 @@
 <package>
   <metadata>
     <id>AtCoderContest.Template.CSharp</id>
-    <version>1.16.1</version>
+    <version>1.16.2</version>
     <description>
       AtCoder Contest Template
     </description>
-    <authors>Kazuki Wada</authors>
+    <authors>kazurego7</authors>
     <packageTypes>
       <packageType name="Template" />
     </packageTypes>
