--- a/LibraryTemplateTests/LibraryTemplateTests.csproj
+++ b/LibraryTemplateTests/LibraryTemplateTests.csproj
@@ -4,11 +4,11 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0"/>
-    <PackageReference Include="xunit" Version="2.4.1"/>
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1"/>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
+    <PackageReference Include="xunit" Version="2.4.1" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\LibraryTemplate\content\AtCoderContest.csproj"/>
+    <ProjectReference Include="..\LibraryTemplate\LibraryTemplate.csproj" />
   </ItemGroup>
 </Project>
