--- a/MakeAC/MakeAC.csproj
+++ b/MakeAC/MakeAC.csproj
@@ -3,8 +3,12 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-  </PropertyGroup>
 
+    <PackAsTool>true</PackAsTool>
+    <ToolCommandName>mkac</ToolCommandName>
+    <PackageOutputPath>./nupkg</PackageOutputPath>
+  </PropertyGroup>
+  
   <ItemGroup>
     <PackageReference Include="ConsoleAppFramework" Version="2.2.0" />
     <PackageReference Include="ProcessX" Version="1.2.0" />
